<resources>
    <string name="app_name">StemTest</string>
    <string name="SelecteerPartij">TextView</string>
    <string name="btnPartijOptie">Button</string>
    <string name="txtStelling">TextView</string>
    <string name="txtAntwoord">TextView</string>
    <string name="txtAntwoordText">TextView</string>
    <string name="txtPartijVisie">TextView</string>
    <string name="txtPartijVisieText">TextView</string>
    <string name="txtStellingText">TextView</string>
    <string name="btnVorigeStelling">Vorige Stelling</string>
    <string name="btnVolgendeStelling">Volgende Stelling</string>
    <string name="txtQuiznaam">Wachten op de volgende stelling</string>
    <string name="txtWacht">Wachten op start spel</string>
    <string name="txtStellingtext">Stelling</string>
    <string name="btnAkoord">Button</string>
    <string name="btnNietAkoord">Button</string>
    <string name="txtArgument">TextView</string>
    <string name="etxtArgument">Argument</string>
    <string name="btnVolgende">Button</string>
    <string name="btnVorige">Button</string>
    <string name="btnSkip">Skip</string>
    <string name="txtGeefCode">Geef de code op het bord in:</string>
    <string name="etxtCode">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partijoptie">partijoptie</string>
    <string name="txtTitel">De stemtest</string>
    <string name="txtWelcome">Geef uw connectID in:</string>
    <string name="etConnect">123456</string>
    <string name="btnConnect">Connect</string>
    <string name="txtName">TextView</string>
    <string name="txtview">Uw resultaat</string>
    <string name="txtPartyName">partij 1</string>
    <string name="argumentStelling">Argument</string>
    <string name="chosenParty">Gekozen Partij:</string>
    <string name="Statements">Stellingen</string>
    <string name="Score">Score:</string>
    <string name="YourAnswer">Jouw Antwoord:</string>
    <string name="PartyAnswer">Partij Antwoord:</string>
    <string name="MoreInfo">Meer info</string>
    <string name="txtChosenparty">Gekozen partij</string>
    <string name="txtScore">Score</string>
    <string name="disagree">niet akkoord</string>
    <string name="agree">akkoord</string>
    <string name="btnScanQr">QR code scannen</string>
    <string name="txtResultOfQR">Result</string>
    <string name="txtdgResult">result</string>
    <string name="txtDgResultStelling">resultstelling</string>
    <string name="txtDgYourAnswer">yourAnswer</string>
    <string name="dgYourAnswer">youranswer</string>
    <string name="by_team_daemons">By Team Daemons</string>
    <string name="meer_info">Meer info</string>
    <string name="picture_of_the_party_logo">Picture of the party logo</string>
    <string name="partij_informatie">Partij informatie</string>
    <string name="overzicht">Overzicht</string>
    <string name="ori_ntatie">Oriëntatie:</string>
    <string name="partijleider">Partijleider:</string>
    <string name="partijkleur">Partijkleur:</string>
    <string name="connectionProblem">Er lijkt een connectieprobleem te zijn. Controleer uw internetverbinding</string>
    <string name="privacy_title">Daemons privacy overeenkomst</string>
    <string name="privacy_general">Door de Daemons stemtest te spelen gaat u akkoord met onze privacy overeenkomst. U kan een korte samenvatting lezen hieronder of de volledige op de website (link onderaan de pagina)</string>
    <string name="privacy_camera_title">Camera gebruik</string>
    <string name="privacy_camera">Deze applicatie maakt alleen gebruik van de camera met als doel een QR code te scannen om een spel te spelen. De camera communiceert niet met het internet en er worden geen afbeeldingen opgeslagen.</string>
    <string name="privacy_internet_title">Internet gebruik</string>
    <string name="privacy_internet">De app maakt gebruik van het internet om te communiceren met onze servers. Zonder deze communicatie is het spel spelen niet mogelijk. Alle data die u ingeeft tijdens het spelen wordt anoniem verwerkt en opgeslagen. Eens een spel beïndigt is, is er geen enkele manier mogelijk om de door u ingestuurde data terug te linken aan uw persoon.</string>
    <string name="privacy_button">Volledig privacy statement (opent browser)</string>
    <string name="privacy_overeenkomst">PRIVACY OVEREENKOMST</string>
    <string name="stellingen">Stellingen</string>
    <string name="resultaten">Resultaten</string>
    <string name="juist_antwoord">Juist antwoord</string>
</resources>
